--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -2,7 +2,7 @@ name: Hot News Crawler
 
 on:
   schedule:
-    - cron: "*/180 * * * *" # 每 180 分钟运行一次
+    - cron: "0 15 17 * * ? *" # 每天下午5点15分执行
   workflow_dispatch:
 
 # 添加权限设置
